# school_21_library_api

./: README.md  pyproject.toml
migrations/: env.py
migrations/versions/: d1f04995879e_add_users_and_book_tables.py
src/library_api/: config.py  main.py
src/library_api/models/books/: book_exemplars.py  book_instance_states.py  book_instances.py  book_meta.py  books.py
src/library_api/models/clusters/: clusters.py
src/library_api/models/tags/: tags.py
src/library_api/models/users/: users.py
src/library_api/views/: book_exemplars.py  book_instance_states.py  book_instances.py  books.py  login.py  users.py
src/library_api/views/base/: base_api.py
