[tool.poetry]
name = "library_api"
version = "0.1.0"
description = ""
authors = ["Ivan <ApxuBapuyc@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.1"
gino = {extras = ["starlette"], version = "^1.0.1"}
uvicorn = "^0.12.2"
gunicorn = "^20.0.4"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."library_api.modules"]
"users" = "library_api.views.users"
"books" = "library_api.views.books"
"book_instances" = "library_api.views.book_instances"
"book_instance_states" = "library_api.views.book_instance_states"
